# eos-clipboard-manager

./: .gitignore  FILES.md  NOTES.md  README.md  meson.build  package.json  run.sh  tsconfig.json
builddir/: .ninja_deps  .ninja_log  build.ninja  io.orta.template
builddir/meson-logs/: install-log.txt  meson-log.txt
builddir/meson-private/: cmd_line.txt
data/: clipboard.appdata.xml  clipboard.desktop  io.orta.clipboard.in  io.orta.clipboard.src.gresource.xml.in  io.orta.template.in  io.orta.template.src.gresource.xml.in
run/share/applications/: io.orta.template.desktop
run/share/io.orta.template/: io.orta.template.src.gresource
run/share/metainfo/: io.orta.template.appdata.xml
scripts/: bootstrap.sh  run.sh  watch.js
src/: ambient.d.ts  main.js  main.ts  mainWindow.ts
